# YAPMO-vibe2

./: .devdbrc  .gitignore  README.md  config.json  cp.sh  pyproject.toml  run.sh  s.sh  t.sh
.devcontainer/: Dockerfile.rancher  check-rancher.ps1  devcontainer.json  docker-compose.yml  setup-rancher.ps1
Documentation/: BATCH_PROCESSING_README.md  stageplan_fill_db_v2.md  yapmo_statemachine.md
Prompts/: Check of dit een neiw tak wordt.md  agreements.md  error_free.md  fast_prompt.md  gittest.txt  hallo.txt  myprompt.md  prompt.txt  stageplan_fill_db_v2_1.md  stageplan_yapmo_db.md  yapmo_statemachine_v2_1.md
app/: ABORT_FUNCTIONALITY_DOCUMENTATION.md  BATCH_PROCESSING_README.md  PERFORMANCE_OPTIMIZATIONS_DOCUMENTATION.md  README_DOCUMENTATION.md  config.json  config.py  images_auto_field.db  main.py  shutdown_manager.py  theme.py  worker_functions.py  yapmo_globals.py
app/core/: db_manager_v2.py  db_manager_v3.py  logging_integration.py  logging_service_v2.py  process_single_file.py  progress_tracker.py  result_processor.py
app/debug/: performance_ui.py
app/pages/: config_page.py  element_test_page.py  fill_db_page_v2.py  main_page.py
app/pages/debug/: fill_db_page_v2_debug.py
app2/: .mypy.ini  .pylintrc  README.md  THEME_USAGE_EXAMPLES.md  __init__.py  config.json  config.py  database_manager.py  database_manager_old.py  globals.py  io_bound_service.py  local_directory_picker.py  main.py  media_processing.py  requirements.txt  theme.py
app2/pages/: __init__.py  config_page.py  element_test_page.py  fill_db_page.py  main_page.py  metadata_page.py  sql_page.py  work1_page.py
app3/: Aanwijzing.txt  conf copy.json  conf.json  config.py  config_page.py  db_manager.py  dialog.py  exif_read_write.py  exif_write_ui.py  fill_db_page.py  fill_db_page_met_keep_alive.py  globals.py  images.db  images_auto_field.db  images_write4.db  log.txt  main.py  menu.py  message.py  metadata_page.py  process_dir_tree.py  process_mediafinder.py  sql_db.py  sql_db_page.py  test.py  test2.py  theme.py  write_db_page.py  yapmo.json
app3/SQL/: images.sqbpro  select alll images_small.sqbpro
app_not_used/: test_abort_manager.py  test_logging_integration.py  test_logging_queue.py  test_result_queue.py  test_result_queue_integration.py
app_not_used/Prompts/: CONFIG_MIGRATION_PLAN.md  Fill_db_new.md  Live_Test_Plan.md  Projectplan.md  Stage_plan.md  UI_refactoring.md  Zet markers om.md  notes.md  rebuild.md
app_not_used/ROOT/: YAPMO_Architecture_Advice.md  YAPMO_Stageplan.md  activate_ui_tests.py  fix_test_ai_markers.py  fix_test_ai_markers_v3.py  setup.sh  test_abort_functionality.py  test_button_state.py  test_completion_detection.py  test_completion_handling.py  test_directory_processor.py  test_error_handling.py  test_final_integration.py  test_logging_integration.py  test_parallel_worker_manager.py  test_process_single_file.py  test_progress_tracker.py  test_result_processor.py  test_todo_tree.py  test_ui_integration.py  test_ui_notify_fix.py  test_ui_update_debug.py  test_unicode_support.py
app_not_used/core/: __init__.py  directory_processor.py  file_scanner_old.py  logging_service.py  parallel_worker_manager.py  process_directory_old.py  process_media_files_old.py  process_single_file_old.py
app_not_used/managers/: README.md  __init__.py  abort_manager_old.py  database_manager_old.py  logging_manager_old.py  process_manager_old.py  queue_manager_old.py
app_not_used/pages/: __init__.py  fill_db_new.py  fill_db_page_old.py  test_traverse_page_old.py
app_not_used/queues/: README.md  __init__.py  logging_queue_old.py  progress_queue_old.py  result_queue_old.py
app_not_used/tests/: test_file_scanner.py  test_process_manager.py  test_process_manager_integration.py
test/: README_memory_tests.md  app_memory_log.txt  memory_log.txt  memory_monitor.py  memory_monitor_app.py  memory_report.txt  run_memory_test.sh  run_memory_tests.sh  run_poetry_memory_test.sh  test_fill_db_page_v2_config__1.py  test_fill_db_page_v2_idle_state_2__1.py  test_fill_db_page_v2_state_transition_1__2.py  test_fill_db_page_v2_states_1__1.py  test_logging_integration.py  test_logging_v2.py  test_memory_app.py  test_memory_leaks.py  test_memory_quick.py  test_memory_simple.py  test_memory_working.py  test_parallel_worker_manager.py  test_process_single_file.py  test_progress_tracker.py  test_result_processor.py  test_scenarios.py
